--- a/hw4/customdialogs.html
+++ b/hw4/customdialogs.html
@@ -13,6 +13,7 @@
     <button id="safer">Safer Prompt</button>
     <output id="output"></output>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.1/purify.js"></script>
     <script type="module" src="./customdialog.js"></script>
   </body>
 </html>
