--- a/pages/about.html
+++ b/pages/about.html
@@ -50,36 +50,29 @@
       <div class="about-grid">
         <div class="about-text">
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged.
+            Hi! My name is Steven Chin. I'm an aspiring web developer based in
+            San Diego and soon-to-be graduate from UC San Diego (c/o 2023) with
+            a B.S. in Mathematics-Computer Science.
           </p>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged.
+            As a chronically online individual, I love learning about how the
+            Web works. Whether I'm watching cooking videos on YouTube or playing
+            League, I'm always curious about the technology that enables the
+            everyday things we use.
           </p>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged.
+            My main skills lie in front-end development, though I'm also versed
+            in backend languages. I'm interested in UX/UI design and helping
+            make the Web more accessible for all.
           </p>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged.
+            In my free time, you can find me trying out a new recipe for my food
+            page or out and about shooting film. I'm also an avid fragrance
+            collector and fashion enthusiast.
+          </p>
+          <p>
+            Please feel free to contact me on my socials or using the contact
+            form on this website. Looking forward to talking soon!
           </p>
         </div>
         <picture class="headshot">
