Update testimonial headings

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   loading="lazy"
                 />
               </picture>
-              <h3 class="testimonial-heading">Testimonial 1</h3>
+              <h3 class="testimonial-heading">Sharon J. (CSE 801 Professor)</h3>
               <p>
                 Steven is an exceptional student and aspiring web developer who
                 has impressed me with his eagerness to learn and his dedication
@@ -106,7 +106,7 @@
                   loading="lazy"
                 />
               </picture>
-              <h3 class="testimonial-heading">Testimonial 2</h3>
+              <h3 class="testimonial-heading">Vanessa B. (Client)</h3>
               <p>
                 As a client, I had the pleasure of working with Steven, a
                 talented and passionate web developer, on my website project.
@@ -135,7 +135,7 @@
                   loading="lazy"
                 />
               </picture>
-              <h3 class="testimonial-heading">Testimonial 1</h3>
+              <h3 class="testimonial-heading">Carlos M. (CEO of Orange)</h3>
               <p>
                 I am impressed by Steven's dedication and enthusiasm for web
                 development. As a highly skilled student and aspiring web
