Remove placeholder text

--- a/pages/wip/wip.html
+++ b/pages/wip/wip.html
@@ -71,12 +71,9 @@
               <a href="/pages/wip/cse134-hw2.html">CSE 134B HW2</a>
             </h2>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged.
+              This is part of an assignment for CSE 134B: Web Client Languages. 
+              The goal of this exercise is to explore the different HTML elements
+              and use them semantically.
             </p>
           </article>
         </li>
