--- a/hw5/methodtest.html
+++ b/hw5/methodtest.html
@@ -5,26 +5,86 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTTP with JavaScript</title>
+  <link rel="icon" href="/assets/images/logo.svg" />
+  <link rel="stylesheet" href="/assets/styles/index.css" />
 </head>
 <body>
-  <p>Fill out the following fields and select an HTTP method.</p>
-  <form id="form">
-    <label for="id">Record ID</label>
-    <input type="number" id="id" name="id" />
+  <header>
+    <nav>
+      <ul class="site-nav">
+        <li>
+          <a href="/pages/about.html">About</a>
+        </li>
+        <li>
+          <a href="/pages/projects/projects.html">Projects</a>
+        </li>
+        <li>
+          <a href="/index.html" class="logo-link">
+            <img src="/assets/images/logo.svg" alt="Home" class="logo" />
+          </a>
+        </li>
+        <li>
+          <a href="/pages/wip/wip.html">WIP</a>
+        </li>
+        <li>
+          <a href="/pages/contact.html">Contact</a>
+        </li>
+        <li>
+          <a href="/hw5/methodtest.html">HTTP with JS</a>
+        </li>
+        <li>
+          <a href="/hw5/webcomponent.html">Simple Web Component</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <p>Fill out the following fields and select an HTTP method.</p>
+    <form id="form">
+      <label for="id">Record ID</label>
+      <input type="number" id="id" name="id" />
 
-    <label for="article_name">Article Name</label>
-    <input type="text" id="article_name" name="article_name" />
+      <label for="article_name">Article Name</label>
+      <input type="text" id="article_name" name="article_name" />
 
-    <label for="article_body">Article Content</label>
-    <textarea id="article_body" name="article_body"></textarea>
+      <label for="article_body">Article Content</label>
+      <textarea id="article_body" name="article_body"></textarea>
 
-    <input type="hidden" id="date" name="date" />
+      <input type="hidden" id="date" name="date" />
 
-    <button type="button" id="postBtn">Post</button>
-    <button type="button" id="getBtn">Get</button>
-    <button type="button" id="putBtn">Put</button>
-    <button type="button" id="deleteBtn">Delete</button>
-  </form>
+      <button type="button" id="postBtn">Post</button>
+      <button type="button" id="getBtn">Get</button>
+      <button type="button" id="putBtn">Put</button>
+      <button type="button" id="deleteBtn">Delete</button>
+    </form>
+  </main>
+  <footer>
+    <address>
+      <ul class="socials">
+        <li>
+          <a href="https://github.com/sdchin">
+            <img
+              src="/assets/images/github-mark.svg"
+              alt="Visit GitHub profile"
+              height="35"
+              loading="lazy"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="https://linkedin.com/in/sdchin">
+            <img
+              src="/assets/images/LI-In-Bug.png"
+              alt="Visit LinkedIn profile"
+              height="35"
+              loading="lazy"
+            />
+          </a>
+        </li>
+      </ul>
+    </address>
+    <small>Made with <span lang="yue">愛</span></small>
+  </footer>
   <script>
     async function sendRequest(e) {
       let action;
