--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
           <li>
             <a href="/pages/contact.html">Contact</a>
           </li>
+          <li>
+            <a href="/hw5/methodtest.html">HTTP with JS</a>
+          </li>
+          <li>
+            <a href="/hw5/webcomponent.html">Simple Web Component</a>
+          </li>
         </ul>
       </nav>
     </header>
