--- a/hw5/webcomponent.html
+++ b/hw5/webcomponent.html
@@ -7,6 +7,7 @@
   <title>HTTP with JavaScript</title>
   <link rel="icon" href="/assets/images/logo.svg" />
   <link rel="stylesheet" href="/assets/styles/index.css" />
+  <script src="/hw5/ButtonCount.js" type="module"></script>
 </head>
 <body>
   <header>
@@ -39,6 +40,7 @@
     </nav>
   </header>
   <main>
+    <button-count></button-count>
   </main>
   <footer>
     <address>
