--- a/hw5/methodtest.html
+++ b/hw5/methodtest.html
@@ -94,7 +94,9 @@
       let date = new Date().toISOString();
       form.querySelector('#date').value = date;
 
-      let body = new FormData(form);
+      let formData = new FormData(form);
+      let body = new URLSearchParams(formData).toString();
+      let qString = body;
       
       let resp;
 
@@ -104,7 +106,6 @@
           method =  'POST';
           break;
         case 'getBtn':
-          let qString = new URLSearchParams(body).toString();
           action = `https://httpbin.org/get?${qString}`;
           method = 'GET';
           break;
@@ -113,7 +114,7 @@
           method = 'PUT';
           break;
         case 'deleteBtn':
-          action = 'https://httpbin.org/delete';
+          action = `https://httpbin.org/delete?${qString}`;
           method = 'DELETE';
           break;
         default:
