--- a/hw5/methodtest.html
+++ b/hw5/methodtest.html
@@ -103,7 +103,7 @@
       let selected = e.target.id;
       switch (selected) {
         case 'postBtn':
-          action = 'https://httpbin.org/posadadadt';
+          action = 'https://httpbin.org/post';
           method =  'POST';
           break;
         case 'getBtn':
