Remove HW files

--- a/index.html
+++ b/index.html
@@ -51,12 +51,6 @@
           <li>
             <a href="/pages/contact.html">Contact</a>
           </li>
-          <li>
-            <a href="/hw5/methodtest.html">HTTP with JS</a>
-          </li>
-          <li>
-            <a href="/hw5/webcomponent.html">Simple Web Component</a>
-          </li>
         </ul>
       </nav>
     </header>
@@ -69,7 +63,7 @@
       </section>
       <section>
         <h2>Featured</h2>
-        <a href="/pages/wip/cse134-hw2.html">
+        <a href="/">
           <picture class="featured">
             <img
               src="/assets/images/pleaseclick.png"
