Configurate Netlify form handling for contact

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,7 +62,7 @@
           Steven Chin. Required fields are marked with
           <span aria-label="required">*</span>.
         </p>
-        <form method="post" class="form-grid">
+        <form name="contact" method="POST" class="form-grid" data-netlify="true">
           <label for="name"
             >Name:
             <span aria-label="required" title="required">*</span>
